--- a/m4d/Views/UsageLog/Index.cshtml
+++ b/m4d/Views/UsageLog/Index.cshtml
@@ -18,27 +18,20 @@
 <h1>@ViewBag.Title</h1>
 
 <div class="row my-1">
-    <div class="col">
-        Views:
+    <div class="col-auto">
+        <strong>Views:</strong>
     </div>
-    <div class="col">
+    <div class="col-auto">
         @Html.ActionLink("High Usage", "Index", "UsageLog", null, new
             {
-                @class = "btn btn-primary",
+                @class = "btn btn-primary btn-sm",
                 role = "button"
             })
     </div>
-    <div class="col">
-        @Html.ActionLink("Low Usage", "LowUsage", "UsageLog", null, new
-            {
-                @class = "btn btn-secondary",
-                role = "button"
-            })
-    </div>
-    <div class="col">
+    <div class="col-auto">
         @Html.ActionLink("Pages", "Pages", "UsageLog", null, new
             {
-                @class = "btn btn-secondary",
+                @class = "btn btn-secondary btn-sm",
                 role = "button"
             })
     </div>
