--- a/m4d/Views/UsageLog/Index.cshtml
+++ b/m4d/Views/UsageLog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using m4d.ViewModels
+@using m4d.ViewModels
+@using m4d.Controllers
 @model m4d.Controllers.UsageModel
 
 @{
@@ -38,61 +39,75 @@
 </div>
 
 <div class="row my-1">
-    <div class="col">
-        Days:
+    <div class="col-auto">
+        <strong>Bot Filter:</strong>
     </div>
-    <div class="col">
-        @Html.ActionLink("Today", "DayLog", "UsageLog", new
+    <div class="col-auto">
+        @Html.ActionLink("All Traffic", "Index", "UsageLog", new { botFilter = BotFilter.All }, new
             {
-                day = 0
-            }, 
-            new
-            {
-                @class = "btn btn-secondary",
+                @class = Model.BotFilter == BotFilter.All ? "btn btn-primary btn-sm" : "btn btn-outline-secondary btn-sm",
                 role = "button"
             })
     </div>
-    <div class="col">
-        @Html.ActionLink("Yesterday", "DayLog", "UsageLog", new
+    <div class="col-auto">
+        @Html.ActionLink("Exclude Bots", "Index", "UsageLog", new { botFilter = BotFilter.ExcludeBots }, new
             {
-                day = -1
-            }, 
-            new {
-                @class = "btn btn-secondary",
+                @class = Model.BotFilter == BotFilter.ExcludeBots ? "btn btn-primary btn-sm" : "btn btn-outline-secondary btn-sm",
                 role = "button"
             })
     </div>
-    <div class="col">
-        @Html.ActionLink("-2", "DayLog", "UsageLog", new
-        {
-            day = -2
-        },
-        new
-        {
-            @class = "btn btn-secondary",
-            role = "button"
-        })
+    <div class="col-auto">
+        @Html.ActionLink("Bots Only", "Index", "UsageLog", new { botFilter = BotFilter.BotsOnly }, new
+            {
+                @class = Model.BotFilter == BotFilter.BotsOnly ? "btn btn-primary btn-sm" : "btn btn-outline-secondary btn-sm",
+                role = "button"
+            })
     </div>
 </div>
 
 <div class="row my-1">
-    <div class="col">Summary:</div>
-    <div class="col">
-        Count = @items.Count()
+    <div class="col-auto">
+        <strong>Days:</strong>
     </div>
-    <div class="col">
-        Last Refresh = @Model.LastUpdate.ToString()
-    </div>
-    <div class="col">
-        @Html.ActionLink("Clear Cache", "ClearCache", "UsageLog", null, new
+    <div class="col-auto">
+        @Html.ActionLink("Today", "DayLog", "UsageLog", new { day = 0 }, new
             {
-                @class = "btn btn-primary",
+                @class = "btn btn-secondary btn-sm",
+                role = "button"
+            })
+    </div>
+    <div class="col-auto">
+        @Html.ActionLink("Yesterday", "DayLog", "UsageLog", new { day = -1 }, new
+            {
+                @class = "btn btn-secondary btn-sm",
+                role = "button"
+            })
+    </div>
+    <div class="col-auto">
+        @Html.ActionLink("-2", "DayLog", "UsageLog", new { day = -2 }, new
+            {
+                @class = "btn btn-secondary btn-sm",
                 role = "button"
             })
     </div>
 </div>
 
-
+<div class="row my-1">
+    <div class="col-auto"><strong>Summary:</strong></div>
+    <div class="col-auto">
+        Count = @items.Count()
+    </div>
+    <div class="col-auto">
+        Last Refresh = @Model.LastUpdate.ToString()
+    </div>
+    <div class="col-auto">
+        @Html.ActionLink("Clear Cache", "ClearCache", "UsageLog", null, new
+            {
+                @class = "btn btn-secondary btn-sm",
+                role = "button"
+            })
+    </div>
+</div>
 
 <div class="row">
     <div class="col">
