--- a/m4d/Views/Shared/_head.cshtml
+++ b/m4d/Views/Shared/_head.cshtml
@@ -117,7 +117,14 @@
         xsrfToken: '@GetAntiXsrfRequestToken()',
         searchHealthy: @(_serviceHealth.IsServiceHealthy("SearchService").ToString().ToLower()),
         databaseHealthy: @(_serviceHealth.IsServiceHealthy("Database").ToString().ToLower()),
-        configurationHealthy: @(_serviceHealth.IsServiceHealthy("AppConfiguration").ToString().ToLower())
+        configurationHealthy: @(_serviceHealth.IsServiceHealthy("AppConfiguration").ToString().ToLower()),
+        usageTracking: {
+            enabled: @(_configuration.GetValue<bool>("UsageTracking:Enabled", true).ToString().ToLower()),
+            anonymousThreshold: @(_configuration.GetValue<int>("UsageTracking:AnonymousThreshold", 3)),
+            anonymousBatchSize: @(_configuration.GetValue<int>("UsageTracking:AnonymousBatchSize", 5)),
+            authenticatedBatchSize: @(_configuration.GetValue<int>("UsageTracking:AuthenticatedBatchSize", 1)),
+            maxQueueSize: @(_configuration.GetValue<int>("UsageTracking:MaxQueueSize", 100))
+        }
     };
 </script>
 
